<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:padding="20sp">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileImage"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/todo" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name22"
        android:id="@+id/name"
        android:layout_marginBottom="20sp"
        android:autofillHints=""
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:hint="@string/mobile_no"
        android:layout_marginBottom="20sp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cconfirm"
        android:id="@+id/settingsubmit"/>

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp" />

</LinearLayout>