<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrationpage">
    <EditText
        android:id="@+id/nameteview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="686dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="210dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sexradiogroup"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="130dp"
        app:layout_constraintVertical_bias="0.517"
        android:paddingStart="130dp"
        tools:ignore="RtlSymmetry">

        <RadioButton
            android:id="@+id/malebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:paddingRight="30dp"
            android:paddingEnd="30dp" />

        <RadioButton
            android:id="@+id/femalebutton"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <EditText
        android:id="@+id/emailtext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="686dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/passwardtext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="686dp"
        android:autofillHints=""
        android:hint="@string/passward"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitutton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/submit"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

</androidx.constraintlayout.widget.ConstraintLayout>